--- a/_config.yml
+++ b/_config.yml
@@ -68,7 +68,7 @@ defaults:
       type: posts
     values:
       layout: single
-      author_profile: true
+      author_profile: false
       read_time: true
       comments: false
       share: true
@@ -79,7 +79,7 @@ defaults:
       type: pages
     values:
       layout: single
-      author_profile: true
+      author_profile: false
 
 # Exclude from processing.
 # The following items will not be processed, by default.
