--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,6 +4,8 @@ main:
     url: /
   - title: "Projects"
     url: /projects/
+  - title: "Resume"
+    url: /resume/
   - title: "About Me"
     url: /about-me/
 
